{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 118,
  "lineage": "bdc80ce7-6824-3223-e202-10245c5d729f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_cloud9_rt_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e15c2f7c7e8020b3179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e15c2f7c7e8020b3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0049f73e35a9487e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.cloud9_eks_peer",
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_route_table.private",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_eks_rt_cloud9",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0021b3ef1be5eb1e43854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0021b3ef1be5eb1e4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0049f73e35a9487e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.cloud9_eks_peer",
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.cloud9_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a4eb8e7e418b0f083854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a4eb8e7e418b0f08",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0049f73e35a9487e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.cloud9_eks_peer",
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.cloud9_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.31.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-013bd7d9cf7f7b8a03854007479",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013bd7d9cf7f7b8a0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0049f73e35a9487e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.cloud9_eks_peer",
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.cloud9_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_cloud9_rt_eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-002becdd016262377179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002becdd016262377",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0049f73e35a9487e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.cloud9_eks_peer",
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_route_table.public",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "cloud9_eks_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0049f73e35a9487e7",
            "peer_owner_id": "535479350247",
            "peer_region": "ap-southeast-1",
            "peer_vpc_id": "vpc-055e76ab56b6d6e06",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between the Cloud9 VPC and EKS VPC"
            },
            "tags_all": {
              "Name": "VPC Peering between the Cloud9 VPC and EKS VPC"
            },
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:network-acl/acl-0e53d3c6fb62ab500",
            "default_network_acl_id": "acl-0e53d3c6fb62ab500",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e53d3c6fb62ab500",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "535479350247",
            "subnet_ids": [
              "subnet-06edb80377e5d6e4c",
              "subnet-084e0f6c812e5309b",
              "subnet-0bde2939b85828b02"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-default"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-default"
            },
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:route-table/rtb-0423f7a1b6b79942f",
            "default_route_table_id": "rtb-0423f7a1b6b79942f",
            "id": "rtb-0423f7a1b6b79942f",
            "owner_id": "535479350247",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-default"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:security-group/sg-050fe0f798df5244e",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050fe0f798df5244e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "535479350247",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-default"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-default"
            },
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:route-table/rtb-0021b3ef1be5eb1e4",
            "id": "rtb-0021b3ef1be5eb1e4",
            "owner_id": "535479350247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.31.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0049f73e35a9487e7"
              }
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-private-ap-southeast-1a"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-private-ap-southeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:route-table/rtb-0a4eb8e7e418b0f08",
            "id": "rtb-0a4eb8e7e418b0f08",
            "owner_id": "535479350247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.31.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0049f73e35a9487e7"
              }
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-private-ap-southeast-1b"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-private-ap-southeast-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:route-table/rtb-013bd7d9cf7f7b8a0",
            "id": "rtb-013bd7d9cf7f7b8a0",
            "owner_id": "535479350247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.31.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0049f73e35a9487e7"
              }
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-private-ap-southeast-1c"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-private-ap-southeast-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d444cc2bad0eeb5",
            "route_table_id": "rtb-0021b3ef1be5eb1e4",
            "subnet_id": "subnet-06edb80377e5d6e4c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b9b04cdfabac6a7",
            "route_table_id": "rtb-0a4eb8e7e418b0f08",
            "subnet_id": "subnet-084e0f6c812e5309b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae913f1bf74b5889",
            "route_table_id": "rtb-013bd7d9cf7f7b8a0",
            "subnet_id": "subnet-0bde2939b85828b02"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:subnet/subnet-06edb80377e5d6e4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06edb80377e5d6e4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535479350247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-private-ap-southeast-1a",
              "kubernetes.io/cluster/private-eks-vpc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-private-ap-southeast-1a",
              "kubernetes.io/cluster/private-eks-vpc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:subnet/subnet-084e0f6c812e5309b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084e0f6c812e5309b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535479350247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-private-ap-southeast-1b",
              "kubernetes.io/cluster/private-eks-vpc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-private-ap-southeast-1b",
              "kubernetes.io/cluster/private-eks-vpc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:subnet/subnet-0bde2939b85828b02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bde2939b85828b02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535479350247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-private-ap-southeast-1c",
              "kubernetes.io/cluster/private-eks-vpc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-private-ap-southeast-1c",
              "kubernetes.io/cluster/private-eks-vpc": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc/vpc-055e76ab56b6d6e06",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e53d3c6fb62ab500",
            "default_route_table_id": "rtb-0423f7a1b6b79942f",
            "default_security_group_id": "sg-050fe0f798df5244e",
            "dhcp_options_id": "dopt-0ac80475708c18eec",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-055e76ab56b6d6e06",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0423f7a1b6b79942f",
            "owner_id": "535479350247",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:network-acl/acl-00897d91020371103",
            "default_network_acl_id": "acl-00897d91020371103",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00897d91020371103",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "535479350247",
            "subnet_ids": [
              "subnet-02c8807aa87203293",
              "subnet-06ce4b34d71610ca9",
              "subnet-06f738424af2e7c2a",
              "subnet-07f5f1ba24b3977a3",
              "subnet-08cf93d80210aa3d0",
              "subnet-0cbb67fa7355ff904"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-default"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-default"
            },
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cloud9_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:route-table/rtb-0eea8018b47561e8b",
            "default_route_table_id": "rtb-0eea8018b47561e8b",
            "id": "rtb-0eea8018b47561e8b",
            "owner_id": "535479350247",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-default"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cloud9_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:security-group/sg-08f4e122cf3a04ee4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08f4e122cf3a04ee4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "535479350247",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-default"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-default"
            },
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cloud9_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f7c538922d2f0ed",
            "association_id": "eipassoc-07b28dc43c3953758",
            "domain": "vpc",
            "id": "eipalloc-02f7c538922d2f0ed",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-066f6170542447936",
            "private_dns": "ip-172-31-0-245.ap-southeast-1.compute.internal",
            "private_ip": "172.31.0.245",
            "public_dns": "ec2-52-76-238-218.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.76.238.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-ap-southeast-1a"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-ap-southeast-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:internet-gateway/igw-0652fe2b26e574d8a",
            "id": "igw-0652fe2b26e574d8a",
            "owner_id": "535479350247",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc"
            },
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f7c538922d2f0ed",
            "connectivity_type": "public",
            "id": "nat-093b5435af0771d52",
            "network_interface_id": "eni-066f6170542447936",
            "private_ip": "172.31.0.245",
            "public_ip": "52.76.238.218",
            "subnet_id": "subnet-06f738424af2e7c2a",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-ap-southeast-1a"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-ap-southeast-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_eip.nat",
            "module.cloud9_vpc.aws_internet_gateway.this",
            "module.cloud9_vpc.aws_subnet.public",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e15c2f7c7e8020b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-093b5435af0771d52",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e15c2f7c7e8020b3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_eip.nat",
            "module.cloud9_vpc.aws_internet_gateway.this",
            "module.cloud9_vpc.aws_nat_gateway.this",
            "module.cloud9_vpc.aws_route_table.private",
            "module.cloud9_vpc.aws_subnet.public",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0652fe2b26e574d8a",
            "id": "r-rtb-002becdd0162623771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002becdd016262377",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_internet_gateway.this",
            "module.cloud9_vpc.aws_route_table.public",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:route-table/rtb-0e15c2f7c7e8020b3",
            "id": "rtb-0e15c2f7c7e8020b3",
            "owner_id": "535479350247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-093b5435af0771d52",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0049f73e35a9487e7"
              }
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-private"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:route-table/rtb-002becdd016262377",
            "id": "rtb-002becdd016262377",
            "owner_id": "535479350247",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0652fe2b26e574d8a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0049f73e35a9487e7"
              }
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-public"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003c39d161acccd19",
            "route_table_id": "rtb-0e15c2f7c7e8020b3",
            "subnet_id": "subnet-02c8807aa87203293"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_route_table.private",
            "module.cloud9_vpc.aws_subnet.private",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08291d42f5bd0a153",
            "route_table_id": "rtb-0e15c2f7c7e8020b3",
            "subnet_id": "subnet-07f5f1ba24b3977a3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_route_table.private",
            "module.cloud9_vpc.aws_subnet.private",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0841c6e228bac9119",
            "route_table_id": "rtb-0e15c2f7c7e8020b3",
            "subnet_id": "subnet-06ce4b34d71610ca9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_route_table.private",
            "module.cloud9_vpc.aws_subnet.private",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f77fe408d565005",
            "route_table_id": "rtb-002becdd016262377",
            "subnet_id": "subnet-06f738424af2e7c2a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_route_table.public",
            "module.cloud9_vpc.aws_subnet.public",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4a5422ab195038d",
            "route_table_id": "rtb-002becdd016262377",
            "subnet_id": "subnet-0cbb67fa7355ff904"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_route_table.public",
            "module.cloud9_vpc.aws_subnet.public",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c8d19bda5624c48",
            "route_table_id": "rtb-002becdd016262377",
            "subnet_id": "subnet-08cf93d80210aa3d0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_route_table.public",
            "module.cloud9_vpc.aws_subnet.public",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:subnet/subnet-02c8807aa87203293",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.31.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c8807aa87203293",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535479350247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-private-ap-southeast-1a"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-private-ap-southeast-1a"
            },
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:subnet/subnet-07f5f1ba24b3977a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.31.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f5f1ba24b3977a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535479350247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-private-ap-southeast-1b"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-private-ap-southeast-1b"
            },
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:subnet/subnet-06ce4b34d71610ca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.31.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ce4b34d71610ca9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "535479350247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-private-ap-southeast-1c"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-private-ap-southeast-1c"
            },
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:subnet/subnet-06f738424af2e7c2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.31.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f738424af2e7c2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "535479350247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-public-ap-southeast-1a"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-public-ap-southeast-1a"
            },
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:subnet/subnet-0cbb67fa7355ff904",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.31.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbb67fa7355ff904",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "535479350247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-public-ap-southeast-1b"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-public-ap-southeast-1b"
            },
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:subnet/subnet-08cf93d80210aa3d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.31.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cf93d80210aa3d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "535479350247",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-public-ap-southeast-1c"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc-public-ap-southeast-1c"
            },
            "vpc_id": "vpc-0af288edccf304e96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.cloud9_vpc.aws_vpc.this",
            "module.cloud9_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cloud9_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc/vpc-0af288edccf304e96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00897d91020371103",
            "default_route_table_id": "rtb-0eea8018b47561e8b",
            "default_security_group_id": "sg-08f4e122cf3a04ee4",
            "dhcp_options_id": "dopt-0ac80475708c18eec",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0af288edccf304e96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eea8018b47561e8b",
            "owner_id": "535479350247",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "cloud9-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "autoscaling",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc-endpoint/vpce-0b3f9a46c7c54c1e4",
            "dns_entry": [
              {
                "dns_name": "vpce-0b3f9a46c7c54c1e4-22bjmj8v.autoscaling.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0b3f9a46c7c54c1e4-22bjmj8v-ap-southeast-1a.autoscaling.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0b3f9a46c7c54c1e4-22bjmj8v-ap-southeast-1b.autoscaling.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0b3f9a46c7c54c1e4-22bjmj8v-ap-southeast-1c.autoscaling.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "autoscaling.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0732943OJ4YGO8ETSVG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0b3f9a46c7c54c1e4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-083961e7d0bed6a2c",
              "eni-08be0631b3f8684c6",
              "eni-0a32d38d7c98d5a6b"
            ],
            "owner_id": "535479350247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-007eee0b0efc4c01a"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.autoscaling",
            "state": "available",
            "subnet_ids": [
              "subnet-06edb80377e5d6e4c",
              "subnet-084e0f6c812e5309b",
              "subnet-0bde2939b85828b02"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-autoscaling"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-autoscaling"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc-endpoint/vpce-00bcb2a1cb04efa23",
            "dns_entry": [
              {
                "dns_name": "vpce-00bcb2a1cb04efa23-25xr9e7w.ec2.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-00bcb2a1cb04efa23-25xr9e7w-ap-southeast-1b.ec2.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-00bcb2a1cb04efa23-25xr9e7w-ap-southeast-1a.ec2.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-00bcb2a1cb04efa23-25xr9e7w-ap-southeast-1c.ec2.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ec2.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z07094933MGHAPJBOFDVR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-00bcb2a1cb04efa23",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-047f04cadcedc6155",
              "eni-071db34ed2fd6d552",
              "eni-0c6d04015337ccd7e"
            ],
            "owner_id": "535479350247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-007eee0b0efc4c01a"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-06edb80377e5d6e4c",
              "subnet-084e0f6c812e5309b",
              "subnet-0bde2939b85828b02"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-ec2"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-ec2"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc-endpoint/vpce-0b6e10893f7f0e305",
            "dns_entry": [
              {
                "dns_name": "vpce-0b6e10893f7f0e305-ajvg3kbu.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0b6e10893f7f0e305-ajvg3kbu-ap-southeast-1a.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0b6e10893f7f0e305-ajvg3kbu-ap-southeast-1b.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0b6e10893f7f0e305-ajvg3kbu-ap-southeast-1c.ec2messages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ec2messages.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0709668LLAXL3R3CKOH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0b6e10893f7f0e305",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-064076520cc04af63",
              "eni-0d100b8554f9fbba8",
              "eni-0d8ea9266266ff854"
            ],
            "owner_id": "535479350247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-007eee0b0efc4c01a"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-06edb80377e5d6e4c",
              "subnet-084e0f6c812e5309b",
              "subnet-0bde2939b85828b02"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-ec2messages"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-ec2messages"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc-endpoint/vpce-0465851840d30a6a5",
            "dns_entry": [
              {
                "dns_name": "vpce-0465851840d30a6a5-57zh249o.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0465851840d30a6a5-57zh249o-ap-southeast-1a.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0465851840d30a6a5-57zh249o-ap-southeast-1b.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0465851840d30a6a5-57zh249o-ap-southeast-1c.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "api.ecr.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z07094731MBZ2PHYXRJO4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0465851840d30a6a5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08262b607a402bfa6",
              "eni-0ccf526febf3171ec",
              "eni-0dff763ec67b4e23f"
            ],
            "owner_id": "535479350247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-007eee0b0efc4c01a"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-06edb80377e5d6e4c",
              "subnet-084e0f6c812e5309b",
              "subnet-0bde2939b85828b02"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-ecr.api"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-ecr.api"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc-endpoint/vpce-0b6b3816c50d86efc",
            "dns_entry": [
              {
                "dns_name": "vpce-0b6b3816c50d86efc-3da6fi1h.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0b6b3816c50d86efc-3da6fi1h-ap-southeast-1a.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0b6b3816c50d86efc-3da6fi1h-ap-southeast-1b.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0b6b3816c50d86efc-3da6fi1h-ap-southeast-1c.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "dkr.ecr.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0330541AE6YY948KYD6"
              },
              {
                "dns_name": "*.dkr.ecr.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0330541AE6YY948KYD6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0b6b3816c50d86efc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0641f9f954e19a320",
              "eni-0b233e044f2766065",
              "eni-0fd781ac70127cc14"
            ],
            "owner_id": "535479350247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-007eee0b0efc4c01a"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-06edb80377e5d6e4c",
              "subnet-084e0f6c812e5309b",
              "subnet-0bde2939b85828b02"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-ecr.dkr"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-ecr.dkr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "elasticloadbalancing",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc-endpoint/vpce-072050c47c71b7cf3",
            "dns_entry": [
              {
                "dns_name": "vpce-072050c47c71b7cf3-0le29haf.elasticloadbalancing.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-072050c47c71b7cf3-0le29haf-ap-southeast-1a.elasticloadbalancing.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-072050c47c71b7cf3-0le29haf-ap-southeast-1b.elasticloadbalancing.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-072050c47c71b7cf3-0le29haf-ap-southeast-1c.elasticloadbalancing.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "elasticloadbalancing.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z08907962K76QU35E9UQP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-072050c47c71b7cf3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-006f45e0ae2248b14",
              "eni-0d9058091d78c5b2f",
              "eni-0f91eaa85a51b5580"
            ],
            "owner_id": "535479350247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-007eee0b0efc4c01a"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.elasticloadbalancing",
            "state": "available",
            "subnet_ids": [
              "subnet-06edb80377e5d6e4c",
              "subnet-084e0f6c812e5309b",
              "subnet-0bde2939b85828b02"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-elasticloadbalancing"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-elasticloadbalancing"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "kms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc-endpoint/vpce-0407f66a975eb6379",
            "dns_entry": [
              {
                "dns_name": "vpce-0407f66a975eb6379-cphr24po.kms.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0407f66a975eb6379-cphr24po-ap-southeast-1c.kms.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0407f66a975eb6379-cphr24po-ap-southeast-1b.kms.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0407f66a975eb6379-cphr24po-ap-southeast-1a.kms.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "kms.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z03312521KX5EKQ1FN6K4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0407f66a975eb6379",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06d35bc89543e058b",
              "eni-0c7763c0eb11fbbf0",
              "eni-0cbc31f97255a7eff"
            ],
            "owner_id": "535479350247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-007eee0b0efc4c01a"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-06edb80377e5d6e4c",
              "subnet-084e0f6c812e5309b",
              "subnet-0bde2939b85828b02"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-kms"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-kms"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc-endpoint/vpce-00c15afa9365f05cb",
            "dns_entry": [
              {
                "dns_name": "vpce-00c15afa9365f05cb-429yjwfr.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-00c15afa9365f05cb-429yjwfr-ap-southeast-1c.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-00c15afa9365f05cb-429yjwfr-ap-southeast-1b.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-00c15afa9365f05cb-429yjwfr-ap-southeast-1a.logs.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "logs.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0341319FQVJKI8ZYW9N"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-00c15afa9365f05cb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02d064307a89bce1e",
              "eni-07abe634e76ea3f86",
              "eni-0c09bcfaeee42d4f3"
            ],
            "owner_id": "535479350247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-007eee0b0efc4c01a"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-06edb80377e5d6e4c",
              "subnet-084e0f6c812e5309b",
              "subnet-0bde2939b85828b02"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-logs"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-logs"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc-endpoint/vpce-0c1f347e522a8be3f",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-0c1f347e522a8be3f",
            "owner_id": "535479350247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0021b3ef1be5eb1e4",
              "rtb-013bd7d9cf7f7b8a0",
              "rtb-0a4eb8e7e418b0f08"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-s3"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-s3"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc-endpoint/vpce-00bb17535bbb57609",
            "dns_entry": [
              {
                "dns_name": "vpce-00bb17535bbb57609-i0fszcww.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-00bb17535bbb57609-i0fszcww-ap-southeast-1b.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-00bb17535bbb57609-i0fszcww-ap-southeast-1c.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-00bb17535bbb57609-i0fszcww-ap-southeast-1a.ssm.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ssm.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z03312482JGX8SLO2TVXS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-00bb17535bbb57609",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-018b6baac86d85e0a",
              "eni-0def29a06c2b8b316",
              "eni-0f36fac115b529234"
            ],
            "owner_id": "535479350247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-007eee0b0efc4c01a"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-06edb80377e5d6e4c",
              "subnet-084e0f6c812e5309b",
              "subnet-0bde2939b85828b02"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-ssm"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-ssm"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc-endpoint/vpce-06a00e5d8b8ab2472",
            "dns_entry": [
              {
                "dns_name": "vpce-06a00e5d8b8ab2472-6ahp8qcs.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-06a00e5d8b8ab2472-6ahp8qcs-ap-southeast-1a.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-06a00e5d8b8ab2472-6ahp8qcs-ap-southeast-1c.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-06a00e5d8b8ab2472-6ahp8qcs-ap-southeast-1b.ssmmessages.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "ssmmessages.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0455903E30QLL41OVAI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-06a00e5d8b8ab2472",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0980d33cbfc0791e8",
              "eni-0a591640a4be4dfdb",
              "eni-0ab4ef4db5186a94f"
            ],
            "owner_id": "535479350247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-007eee0b0efc4c01a"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-06edb80377e5d6e4c",
              "subnet-084e0f6c812e5309b",
              "subnet-0bde2939b85828b02"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-ssmmessages"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-ssmmessages"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:vpc-endpoint/vpce-07817ed464d8a6b3a",
            "dns_entry": [
              {
                "dns_name": "vpce-07817ed464d8a6b3a-5edi0jd6.sts.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-07817ed464d8a6b3a-5edi0jd6-ap-southeast-1b.sts.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-07817ed464d8a6b3a-5edi0jd6-ap-southeast-1a.sts.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-07817ed464d8a6b3a-5edi0jd6-ap-southeast-1c.sts.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "sts.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z0709163FSIDHEW2TOOJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-07817ed464d8a6b3a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05a2427c8d1fcfae9",
              "eni-074c506e288aed124",
              "eni-0c82c64fd585ce370"
            ],
            "owner_id": "535479350247",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-007eee0b0efc4c01a"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-06edb80377e5d6e4c",
              "subnet-084e0f6c812e5309b",
              "subnet-0bde2939b85828b02"
            ],
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-sts"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-sts"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_route_table.private",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:535479350247:security-group/sg-007eee0b0efc4c01a",
            "description": "Security group for VPC endpoint access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-007eee0b0efc4c01a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/18",
                  "10.0.64.0/18",
                  "10.0.128.0/18"
                ],
                "description": "VPC CIDR HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "private-eks-vpc-vpc-endpoints-20230117101815279200000001",
            "name_prefix": "private-eks-vpc-vpc-endpoints-",
            "owner_id": "535479350247",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-vpc-endpoints"
            },
            "tags_all": {
              "Blueprint": "private-eks-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "private-eks-vpc-vpc-endpoints"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-055e76ab56b6d6e06"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All egress HTTPS",
            "from_port": 443,
            "id": "sgrule-853365082",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-007eee0b0efc4c01a",
            "security_group_rule_id": "sgr-0525846090c500039",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/18",
              "10.0.64.0/18",
              "10.0.128.0/18"
            ],
            "description": "VPC CIDR HTTPS",
            "from_port": 443,
            "id": "sgrule-10383658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-007eee0b0efc4c01a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.this",
            "module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_endpoints_sg.aws_security_group.this",
            "module.vpc_endpoints_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}